@@ -1,6 +1,7 @@
 1.0 "Asieoniezi"
 
 0.132 "FIXME"
+ 447680 handle nzb files whose parts are in the wrong order (Benjamin Charron)
  441859 in 0.131, 'read next unread' didn't always work (Artur Jachacy)
  444184 0.131 fails to build on RH4/CentOS4 (Steven Ellis)
  349490 better info for the tool-tip of the Tasks button (Douglas Bollinger)
